# claude-code-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  main.py
src/models/: openai_types.py
src/routes/: chat_completions.py  health.py  models.py
src/services/: claude_runner.py  stream_adapter.py
src/utils/: message_formatter.py  model_mapper.py
tests/: test_chat_completions.py  test_claude_runner.py  test_message_formatter.py  test_model_mapper.py  test_models.py  test_streaming.py  test_tool_calling.py
